RM-8099 Fix BocCheckbox baseline to properly align when displaying differents items in a single row

--- a/Remotion/ObjectBinding/Web/Res/Themes/NovaViso/HTML/BocCheckBox.css
+++ b/Remotion/ObjectBinding/Web/Res/Themes/NovaViso/HTML/BocCheckBox.css
@@ -7,6 +7,7 @@
   border: var(--remotion-themed-border-placeholder);
   border-radius: var(--remotion-themed-border-radius);
   box-sizing: border-box;
+  vertical-align: middle;
 }
 
 .bocCheckBox:not(.readOnly) input + span,
